-Add support for linux enviroment -Add support for pause/resume/live -Fixes